fix:overflow hidden for .imgCover

--- a/design/assets/css/style.css
+++ b/design/assets/css/style.css
@@ -1373,6 +1373,7 @@ fill:var(--main-text-color);
   z-index: 1000;
   background-color: #fff;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 
